# solana-token-info-cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/api/: mod.rs  supply_info.rs  token_info.rs
src/cli/: args.rs
src/config/: consts.rs  mod.rs
src/errors/: errors.rs
src/models/: mod.rs
src/solana/: api.rs  mod.rs
