[package]
name = "solana-token-info-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Ensure serde_json is included
tokio = { version = "1", features = ["full"] }
bs58 = "0.4"