[package]
name = "solana-token-info-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Ensure serde_json is included
tokio = { version = "1", features = ["full"] }
bs58 = "0.4"
solana-client = "1.9"
solana-sdk = "1.9"
solana-program = "1.9"
spl-token = "3.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
trust-dns-resolver = "0.20"
regex = "1.5"
url = "2.2"
thiserror = "1.0"